# voice2voice

./: .gitignore  README.md  pyproject.toml  sample_ui.html  server.py
src/app/: lifespan.py  llm.py  settings.py  speech_to_text.py  text_to_speech.py
